# word_counts

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: conf.py
src/pycounts/: plotting.py  pycounts.py
