[tool.poetry]
name = "pycounts"
version = "0.1.0"
description = "Calculates word counts in a text file"
authors = ["Mahesh Yadav"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
