[tool.poetry]
name = "pycounts"
version = "0.1.0"
description = "Calculates word counts in a text file"
authors = ["Mahesh Yadav"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.3"
matplotlib = "^3.9.2"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.1"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
